Fix fullscreen tests, fullscreen buttons white bg on mobile

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -3593,11 +3593,6 @@ ul.changelist {
   display: none;
 }
 
-@media only screen and (max-width: 70em) {
-  #fullscreen-buttons {
-    background-color: white;
-  }
-}
 
 @media only screen and (max-width:28em) {
   #app-root {
